# backend-migrations

./: .env  Makefile  README.md  docker-compose.yml  pyproject.toml
connection/: session.py
enums/: news_types.py
migrator/: alembic.ini  env.py  script.py.mako
migrator/enums/: news_state.py
migrator/models/: __init__.py  jobs.py  jobs_news.py  news.py  users_jobs.py
migrator/versions/: 2022-10-08-3280bed00e2e_.py  2022-10-08-35a384988a7f_.py  2022-10-08-69121339790f_.py  2022-10-08-6f3111154870_.py  2022-10-08-8a4bb95aaec2_.py  2022-10-08-91922c04a85f_.py  2022-10-08-c5c82f02b18f_.py  2022-10-08-ddcf0226eb7e_.py  2022-10-08-e31cde691b69_.py  2022-10-09-76eb84f656a9_.py
models/: __init__.py  favourite_news.py  insights.py  jobs.py  jobs_news.py  news.py  raw.py  tags.py  tags_jobs.py  tags_news.py  trends.py  users.py  users_jobs.py
neo4j/: initial.cypher
