[tool.poetry]
name = "backend-migrations"
version = "0.1.0"
description = ""
authors = ["huscker <egostalker03@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.1"
psycopg2 = "^2.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
